--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         <div class="section-content">
             <div class="section-head">contact</div>
 
-            <div class="section-text">I can be reached by <a href="mailto:nicholas_mckenna@brown.edu" class="contactlink">email</a>. I'd love to hear from you!</div>
-            <div class="section-text">You can also find me on <a href="https://www.linkedin.com/pub/nick-mckenna/6b/2a7/7b0" class="contact-link">LinkedIn</a> and <a href="https://github.com/nighttime" class="contactlink">GitHub</a>.</div>
+            <div class="section-text">I can be reached by <a href="mailto:nicholas_mckenna@brown.edu" class="contact-link">email</a>. I'd love to hear from you!</div>
+            <div class="section-text">You can also find me on <a href="https://www.linkedin.com/pub/nick-mckenna/6b/2a7/7b0" class="contact-link">LinkedIn</a> and <a href="https://github.com/nighttime" class="contact-link">GitHub</a>.</div>
         </div>
     </div>
 
