--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nick McKenna</title>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,300italic|Merriweather:300,400,400italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="home.css">
