fixed some grammar

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="project">
                 <div class="project-title echo-title">Echo</div>
                 <div class="section-text">What makes a shareable idea?</div>
-                <div class="section-text"><em>Echo</em> is a an experiment in meme propagation. It models the way an idea spreads through a population using a one-way message system in order to explore the quirks and whimsies that make up popular ideas.</div>
+                <div class="section-text"><em>Echo</em> is an experiment in meme propagation. It models the way an idea spreads through a population using a one-way message system in order to explore the quirks and whimsies that make up popular ideas.</div>
                 <div class="section-text">It starts with a user sharing a message on <em>Echo</em>. It's read by a random user around the world. If they share the message, too, it's read by another user and can be shared again. However, if it isn't passed on, the message chain ends and no one will see the message again.</div>
                 <div class="section-text">A message is more popular the more times it has been <em>echoed</em>. All it takes is a single user to break the chain though, and the message will be <em>muted</em>.</div>
                 <div class="section-text"><em>Echo</em> is an iOS project with a web companion. I conceived of the idea, directed all project-wide style, and designed and engineered the mobile UI.</div>
