updated bio text and title

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="header">
         <div id="header-title">nick mckenna</div>
         <div id="header-menu" class="distributed">
-            <a class="menu-link" href="#bio">bio</a>
+            <a class="menu-link" href="#bio">me</a>
             <a class="menu-link" href="#projects">projects</a>
             <a class="menu-link" href="#contact">contact</a>
             <a class="menu-link" href="NickMcKenna.pdf">resume</a>
@@ -28,12 +28,14 @@
 
     <div class="light section" id="bio">
         <div class="section-content">
-            <div class="section-head">bio</div>
+            <div class="section-head">me</div>
 
-            <div class="section-text">I like to build things. I approach projects holistically, thinking in terms of features, engineering complexity, useability, and design. Basically, I breathe product.</div>
-            <div class="section-text">I'm an undergrad at Brown University, where I'm majoring in computer science. I also study language, architecture, and the visual arts.</div>
-            <div class="section-text">I like sci-fi, internet memes, writing short stories, and eating great food. I'm addicted to consumer tech articles, and I don't foresee myself ever escaping <em>that</em> black hole.</div>
-            <div class="section-text">I'm thrilled you're here! Let me tell you about what I've worked on.</div>
+            <div class="section-text">Hi. I’m Nick, and I’m thrilled you’re here.</div>
+            <div class="section-text">I like making things. I also like thinking about the future.</div>
+            <div class="section-text">Why does that matter? Because I’m product-oriented and curious about technology. Because I love imagining solutions to tricky problems, and then jump in to build them. Because I care about users and tomorrow’s world we’re creating today.</div>
+            <div class="section-text">I’m a junior at Brown University, where I major in computer science. My favorite topics are artificial intelligence, computer graphics, and systems design. I also study art, graphic design, language, and architecture.</div>
+            <div class="section-text">Right now I’m in the UK, studying at the University of Edinburgh. I’m exploring culture throughout Europe and loving every second of it.</div>
+            <div class="section-text">I like sci-fi, internet memes, writing stories, and cooking great food. I'm also addicted to consumer tech articles, and if you like sarcasm, we’ll get along just fine.</div>
         </div>
     </div>
 
