--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nick McKenna</title>
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,300italic|Merriweather:300,400,400italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="home.css">
+    <!-- <link href='http://fonts.googleapis.com/css?family=Lato:300,300italic|Merriweather:300,400,400italic' rel='stylesheet' type='text/css'> -->
+    <link href='https://fonts.googleapis.com/css?family=Montserrat|Lato|Fira+Sans|Open+Sans:400,300' rel='stylesheet' type='text/css'>    <link rel="stylesheet" href="home.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="home.js"></script>
 </head>
 
 
 <body>
+<div id="wrapper">
 
-    <div id="header-image"></div>
+    <div class="bg">
+        <div id="header-image"></div>
+    </div>
 
-    <div id="header">
-        <div id="header-title">nick mckenna</div>
+    <div id="header" class="section">
+        <div id="header-title">NICK M<span class="raised-letter">c</span>KENNA</div>
         <div id="header-menu" class="distributed">
             <a class="menu-link" href="#bio">me</a>
             <a class="menu-link" href="#projects">projects</a>
@@ -30,18 +33,34 @@
         <div class="section-content">
             <div class="section-head">me</div>
 
-            <div class="section-text">Hi. I’m Nick, and I’m thrilled you’re here.</div>
-            <div class="section-text">I like making things. I also like thinking about the future.</div>
-            <div class="section-text">Why does that matter? Because I’m product-oriented and curious about technology. Because I love imagining solutions to tricky problems, and then jump in to build them. Because I care about users and tomorrow’s world we’re creating today.</div>
-            <div class="section-text">I’m a junior at Brown University, where I major in computer science. My favorite topics are artificial intelligence, computer graphics, and systems design. I also study art, graphic design, language, and architecture.</div>
-            <div class="section-text">Right now I’m in the UK, studying at the University of Edinburgh. I’m exploring culture throughout Europe and loving every second of it.</div>
-            <div class="section-text">I like sci-fi, internet memes, writing stories, and cooking great food. I'm also addicted to consumer tech articles, and if you like sarcasm, we’ll get along just fine.</div>
+            <div class="section-body">
+                Hi. I’m Nick, and I’m thrilled you’re here.
+                I like making things. I also like thinking about the future. Why? Because I believe that tomorrow's world is what we make of today.
+                I care about the experience of being human in the 21st century, which means I think a lot about technology. How does a product work? What can we do with it? What's the bigger picture?
+                I’m a junior at Brown University, where I major in computer science. My favorite topics are computer graphics and artificial intelligence. I also study graphic design, language, and architecture.
+                Right now I’m in the UK, studying at the University of Edinburgh. I’m exploring culture throughout Europe and loving every second of it.
+                I like sci-fi, internet memes, writing stories, and cooking great food. I'm also addicted to consumer tech articles, and if you like sarcasm, we’ll get along just fine.
+            </div>
+
         </div>
     </div>
 
     <div class="dark section" id="projects">
-        <div class="section-content">
+        <div class="section-content skinny-content">
             <div class="section-head">projects</div>
+        </div>
+
+        <div class="section-content">
+            <div class="project">
+                <div class="project-title echo-title">Echo</div>
+
+                <div class="section-body">
+                    What makes a shareable idea?
+                    <em>Echo</em> is an experiment in meme propagation. It models the way an idea spreads through people using one-way messages.
+                    It starts when a user shares a thought. Another user around the world reads it, and if they share it, it's read by another user, and another, and another, until someone breaks the chain. Then no one will see the message again.
+                    <em>Echo</em> is an iOS project with a web companion. I conceived the idea, directed project-wide style, and engineered the mobile client.
+                </div>
+            </div>
         </div>
 
         <div class="distributed image-set">
@@ -53,12 +72,15 @@
 
         <div class="section-content">
             <div class="project">
-                <div class="project-title echo-title">Echo</div>
-                <div class="section-text">What makes a shareable idea?</div>
-                <div class="section-text"><em>Echo</em> is an experiment in meme propagation. It models the way an idea spreads through a population using a one-way message system in order to explore the quirks and whimsies that make up popular ideas.</div>
-                <div class="section-text">It starts with a user sharing a message on <em>Echo</em>. It's read by a random user around the world. If they share the message, too, it's read by another user and can be shared again. However, if it isn't passed on, the message chain ends and no one will see the message again.</div>
-                <div class="section-text">A message is more popular the more times it has been <em>echoed</em>. All it takes is a single user to break the chain though, and the message will be <em>muted</em>.</div>
-                <div class="section-text"><em>Echo</em> is an iOS project with a web companion. I conceived of the idea, directed all project-wide style, and designed and engineered the mobile UI.</div>
+                <div class="project-title lightning-title">
+                    <p>Lightning</p>
+                    <p>Notes</p>
+                </div>
+                <div class="section-body">
+                    <em>Lightning Notes</em> is a note-taking web app. It understands the way you take notes, styling and structuring text as you type.
+                    You define styling rules, which can affect anything from a single keyword to complex patterns in your text. <em>Lightning</em> structures your document so it's ready to go, right away.
+                    I developed the product idea for <em>Lightning</em>, led interface design efforts, and engineered the text comprehension engine, which dynamically compiles user rules into regexes.
+                </div>
             </div>
         </div>
 
@@ -70,22 +92,32 @@
 
         <div class="section-content">
             <div class="project">
-                <div class="project-title lightning-title">
-                    <p>Lightning</p>
-                    <p>Notes</p>
+                <div class="project-title tti-title">
+                    Two to Infinity
                 </div>
-                <div class="section-text"><em>Lightning Notes</em> is a note-taking web app. It understands the way you take notes, and can style and structure text as you type.</div>
-                <div class="section-text"><em>Lightning</em> translates rules you define into regular expressions which it uses to detect patterns in your notes for styling.</div>
-                <div class="section-text">A style rule can describe font use for keywords or for text after a keyword, horizonatal alignment, background and text coloring, and more.</div>
-                <div class="section-text">I developed the product idea for <em>Lightning</em>, led interface design efforts, and engineered the text comprehension engine, which includes the process of dynamically compiling user rules into regular expressions.</div>
+                <div class="section-body">
+                    <em>2048: Two to Infinity</em> began with a simple mission: to redo 2048 with <em>class</em> (since the original cloned <em>Threes!</em> and added insult to injury with a clunky interface and limited features).
+                    I built the iOS game from the ground up to be fresh, charming, and engaging. It includes achievements, unlockable themes, Leaderboards, and limitless play. I hope you enjoy it :)
+                    You can download it on the <a href="https://itunes.apple.com/us/app/beyond-2048-two-to-infinity!/id860372644?mt=8" class="dark-link">app store</a>.
+                </div>
             </div>
+        </div>
 
+        <div class="video-wrapper">
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/DarccjOP6zE" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+
+        <div class="section-content">
             <div class="project">
                 <img src="design/brown_cs_2.png" id="design-image">
                 <div class="design-text">
-                    <div class="project-title design-title">Design</div>
-                    <div class="section-text">I love UI design, and prefer to architect the look and feel of my interactive projects from scratch.</div>
-                    <div class="section-text">But I also like to experiment with more free-form graphic design, and enjoy exploring new ideas and techniques.</div>
+                    <div class="project-title design-title">Visual Art</div>
+                    <div class="section-body">
+                        I love experimenting with visual mediums.
+                        Some of my favorite projects include interactive Processing sketches, delightfully animated UIs, and bold graphical layouts.
+                    </div>
                 </div>
             </div>
         </div>
@@ -95,14 +127,16 @@
     <div class="light section" id="contact">
         <div class="section-content">
             <div class="section-head">contact</div>
-
-            <div class="section-text">I can be reached by <a href="mailto:nicholas_mckenna@brown.edu" class="contact-link">email</a>. I'd love to hear from you!</div>
-            <div class="section-text">You can also find me on <a href="https://www.linkedin.com/pub/nick-mckenna/6b/2a7/7b0" class="contact-link">LinkedIn</a> and <a href="https://github.com/nighttime" class="contact-link">GitHub</a>.</div>
+            <div class="section-body">
+                I can be reached by <a href="mailto:nicholas_mckenna@brown.edu" class="contact-link">email</a>. I'd love to hear from you!
+                You can also find me on <a href="https://www.linkedin.com/pub/nick-mckenna/6b/2a7/7b0" class="contact-link">LinkedIn</a> and <a href="https://github.com/nighttime" class="contact-link">GitHub</a>.
+            </div>
         </div>
     </div>
 
-    <div class="dark" id="masthead">© 2015 Nick McKenna</div>
+    <div class="dark" id="masthead">© 2016 Nick McKenna</div>
 
+</div>
 </body>
 
 </html>
