--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                     Two to Infinity
                 </div>
                 <div class="section-body">
-                    <em>2048: Two to Infinity</em> began with a simple mission: to redo 2048 with <em>class</em> (since the original cloned <em>Threes!</em> and added insult to injury with a clunky interface and limited features).
-                    I built the iOS game from the ground up to be fresh, charming, and engaging. It includes achievements, unlockable themes, Leaderboards, and limitless play. I hope you enjoy it :)
+                    <em>2048: Two to Infinity</em> began with a simple mission: to redo 2048 with <em>class</em> (since the original <em>2048</em> cloned <em>Threes!</em> and added insult to injury by using a clunky interface with limited features).
+                    I built this iOS game from the ground up to be fresh, charming, and engaging. It includes achievements, unlockable themes, Leaderboards, and limitless play. I hope you enjoy it :)
                     You can download it on the <a href="https://itunes.apple.com/us/app/beyond-2048-two-to-infinity!/id860372644?mt=8" class="dark-link">app store</a>.
                 </div>
             </div>
