changed wording on contact

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         <div class="section-content">
             <div class="section-head">contact</div>
             <div class="section-body">
-                I can be reached by <a href="mailto:nicholas_mckenna@brown.edu" class="contact-link">email</a>. I'd love to hear from you!
-                You can also find me on <a href="https://www.linkedin.com/pub/nick-mckenna/6b/2a7/7b0" class="contact-link">LinkedIn</a> and <a href="https://github.com/nighttime" class="contact-link">GitHub</a>.
+                Reach me by <a href="mailto:nicholas_mckenna@brown.edu" class="contact-link">email</a>, or find me on <a href="https://www.linkedin.com/pub/nick-mckenna/6b/2a7/7b0" class="contact-link">LinkedIn</a> or <a href="https://github.com/nighttime" class="contact-link">GitHub</a>.
+                I'd love to hear from you!
             </div>
         </div>
     </div>
