--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nick McKenna</title>
-    <!-- <link href='http://fonts.googleapis.com/css?family=Lato:300,300italic|Merriweather:300,400,400italic' rel='stylesheet' type='text/css'> -->
-    <link href='https://fonts.googleapis.com/css?family=Montserrat|Lato|Fira+Sans|Open+Sans:400,300' rel='stylesheet' type='text/css'>    <link rel="stylesheet" href="home.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat|Lato|Fira+Sans|Open+Sans:400,300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="home.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="home.js"></script>
 </head>
