--- a/dev.html
+++ b/dev.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nick McKenna</title>
     <link href='https://fonts.googleapis.com/css?family=Montserrat|Lato|Fira+Sans|Open+Sans:400,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="dev.css">
+    <link rel="stylesheet" href="style/dev.css">
+    <link rel="stylesheet" href="style/animate.css">
+    <link rel="stylesheet" href="style/modal.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="dev.js"></script>
 </head>
