--- a/dev.html
+++ b/dev.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style/animate.css">
     <link rel="stylesheet" href="style/modal.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script src="dev.js"></script>
 </head>
 
