updated resume, kinda sorta got project unfolding working

--- a/dev.html
+++ b/dev.html
@@ -28,7 +28,7 @@
             <a class="menu-link" href="#bio">me</a>
             <a class="menu-link" href="#projects">projects</a>
             <a class="menu-link" href="#contact">contact</a>
-            <a class="menu-link" href="NickMcKenna.pdf">resume</a>
+            <a class="menu-link" href="NickMcKenna_new.pdf">resume</a>
         </div>
     </div>
 
@@ -61,86 +61,6 @@
 
         <div id="project-card-holder"></div>
     </div>
-
-
-    <!-- <div class="dark section" id="projects">
-        <div class="section-content skinny-content">
-            <div class="section-head">projects</div>
-        </div>
-
-        <div class="section-content">
-            <div class="project">
-                <div class="project-title echo-title">Echo</div>
-
-                <div class="section-body">
-                    What makes a shareable idea?
-                    <em>Echo</em> is an experiment in meme propagation. It models the way an idea spreads through people using one-way messages.
-                    It starts when a user shares a thought. Another user around the world reads it, and if they share it, it's read by another user, and another, and another, until someone breaks the chain. Then no one will see the message again.
-                    <em>Echo</em> is an iOS project with a web companion. I conceived the idea, directed project-wide style, and engineered the mobile client.
-                </div>
-            </div>
-        </div>
-
-        <div class="distributed image-set">
-            <img src="echo/home.png" class="echo-image">
-            <img src="echo/read.png" class="echo-image">
-            <img src="echo/resonating.png" class="echo-image">
-            <img src="echo/expanded view.png" class="echo-image">
-        </div>
-
-        <div class="section-content">
-            <div class="project">
-                <div class="project-title lightning-title">
-                    <p>Lightning</p>
-                    <p>Notes</p>
-                </div>
-                <div class="section-body">
-                    <em>Lightning Notes</em> is a note-taking web app. It understands the way you take notes, styling and structuring text as you type.
-                    You define styling rules, which can affect anything from a single keyword to complex patterns in your text. <em>Lightning</em> structures your document so it's ready to go, right away.
-                    I developed the product idea for <em>Lightning</em>, led interface design efforts, and engineered the text comprehension engine, which dynamically compiles user rules into regexes.
-                </div>
-            </div>
-        </div>
-
-        <div class="video-wrapper">
-            <div class="video-container">
-                <iframe src="https://player.vimeo.com/video/138032443?autoplay=1&loop=1&color=ffffff&byline=0&portrait=0" width="550" height="371" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="lightning-video"></iframe>
-            </div>
-        </div>
-
-        <div class="section-content">
-            <div class="project">
-                <div class="project-title tti-title">
-                    Two to Infinity
-                </div>
-                <div class="section-body">
-                    <em>2048: Two to Infinity</em> began with a simple mission: to redo 2048 with <em>class</em> (since the original <em>2048</em> cloned <em>Threes!</em> and added insult to injury by using a clunky interface with limited features).
-                    I built this iOS game from the ground up to be fresh, charming, and engaging. It includes achievements, unlockable themes, leaderboards, and limitless play. I hope you enjoy it :)
-                    You can download it on the <a href="https://itunes.apple.com/us/app/beyond-2048-two-to-infinity!/id860372644?mt=8" class="dark-link">app store</a>.
-                </div>
-            </div>
-        </div>
-
-        <div class="video-wrapper">
-            <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/DarccjOP6zE" frameborder="0" allowfullscreen></iframe>
-            </div>
-        </div>
-
-        <div class="section-content">
-            <div class="project">
-                <img src="design/brown_cs_2.png" id="design-image">
-                <div class="design-text">
-                    <div class="project-title design-title">Visual Art</div>
-                    <div class="section-body">
-                        I love experimenting with visual mediums.
-                        Some of my favorite projects include interactive Processing sketches, delightfully animated UIs, and bold graphical layouts.
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div> -->
 
 
     <div class="light section" id="contact">
