added photo and duolingo coding challenge

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     </div>
 
     <div class="light section" id="bio">
+        <div class="sidebar-pic-holder">
+            <div class="flex-container">
+                <div id="me-pic"></div>
+            </div>
+        </div>
         <div class="section-content">
             <!-- <div class="section-head">about me</div> -->
             <div class="section-head">
