updated front page text

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 Hi. I’m Nick, and I’m thrilled you’re here.
                 I like making things. I also like thinking about the future. Why? Because I believe that tomorrow's world is what we make of today.
                 I care about the experience of being human in the 21st century, which means I think a lot about technology. How does a product work? What can we do with it? What's the bigger picture?
-                I’m a rising senior at Brown University, where I major in computer science. My favorite topics are computer graphics and artificial intelligence. I also study graphic design, language, and architecture.
+                I’m a senior at Brown University, where I major in computer science. My favorite topics are artificial intelligence and human-computer interaction. I also study graphic design, language, and architecture.
                 Last semester I was in the UK, studying at the University of Edinburgh. I explored culture throughout Europe and loved every second of it.
                 I like sci-fi, internet memes, writing stories, and cooking great food. I'm also addicted to consumer tech articles, and if you like sarcasm, we’ll get along just fine.
             </div>
