updated bio and resume for newgrad

--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
 
             <div class="section-body">
                 Hi. I’m Nick, and I’m thrilled you’re here.
-                I like making things. I also like thinking about the future. Why? Because I believe that tomorrow's world is what we make of today.
-                I care about the experience of being human in the 21st century, which means I think a lot about technology. How does a technology work? What can we do with it? What's the bigger picture?
-                I’m a senior at Brown University, where I major in computer science. My favorite topics are artificial intelligence and human-computer interaction. I also study rendering techniques for computer graphics, digital design, and architecture.
-                Last semester I was in the UK, studying at the University of Edinburgh. I explored culture throughout Europe and loved every second of it.
-                I like sci-fi, internet memes, writing stories, and cooking great food. I'm also addicted to consumer tech articles, and if you like sarcasm, we’ll get along just fine.
+                I like technology and the way it shapes culture, enhances quality of life, and propels us to a better society. However, technology for the sake of itself is unsustainable. We need strong ethics to fulfill the promises we make about our products while staying true to the human issues that inspired us.
+                This is my goal: to advance society by developing technology that speaks <em>as well as</em> listens; that progresses our capabilities while respecting our values; that works toward a better future for us all.
+                I’m currently a product manager at <a href="https://www.taptobook.com">TapToBook</a> and recently graduated from Brown University, where I got my B.S. in computer science. I focused on artificial intelligence and human-computer interaction while keeping the humanities close to heart.
+                I've lived across the United States and the U.K. I love to travel and explore new cultures. Find me daydreaming about my next adventure.
             </div>
 
         </div>
@@ -75,7 +74,7 @@
             </div>
 
             <div class="section-body">
-                Reach me by <a href="mailto:nicholas_mckenna@brown.edu" class="contact-link">email</a> or find me on <a href="https://www.linkedin.com/pub/nick-mckenna/6b/2a7/7b0" class="contact-link">LinkedIn</a> or <a href="https://github.com/nighttime" class="contact-link">GitHub</a>.
+                Reach me by <a href="mailto:nmckenna363@gmail.com">email</a> or find me on <a href="https://www.linkedin.com/pub/nick-mckenna/6b/2a7/7b0">LinkedIn</a>.
                 I'd love to hear from you!
             </div>
         </div>
