desc + image mime type

--- a/ttb/graph.html
+++ b/ttb/graph.html
@@ -5,7 +5,9 @@
     <meta property="og:title" content="Massage" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://nmckenna.me/ttb/graph.html" />
-    <meta property="og:image" content="http://www.nmckenna.me/ttb/spa.jpg" />
+    <meta property="og:image" content="http://nmckenna.me/ttb/spa.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:description" content="This is the massage of the century!" />
 </head>
 
 
