--- a/ttb/graph.html
+++ b/ttb/graph.html
@@ -4,15 +4,14 @@
 <head>
     <meta property="og:title" content="Massage" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://nmckenna.me/ttb/graph.html" />
-    <meta property="og:image" content="http://nmckenna.me/ttb/spa.jpg" />
+    <meta property="og:image" content="http://nmckenna.me/ttb/spa_small.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:description" content="This is the massage of the century!" />
 </head>
 
 
 <body>
-    WELCOME TO THE SOCIAL GRAPH
+    WELCOME TO THE SOCIAL GRAPH UGH
 </body>
 
 </html>
