--- a/ttb/graph.html
+++ b/ttb/graph.html
@@ -7,6 +7,7 @@
     <meta property="og:image" content="http://nmckenna.me/ttb/spa_small.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:description" content="This is the massage of the century!" />
+    <meta property="og:url" content="http://nmckenna.me/ttb/graph.html" />
 </head>
 
 
