--- a/ttb/graph.html
+++ b/ttb/graph.html
@@ -8,7 +8,7 @@
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:description" content="This is the massage of the century!" />
     <meta property="og:url" content="http://nmckenna.me/ttb/graph.html" />
-    <meta property="og:fb:app_id" content="398771933631124" />
+    <meta property="fb:app_id" content="398771933631124" />
 </head>
 
 
