--- a/ttb/graph.html
+++ b/ttb/graph.html
@@ -5,7 +5,7 @@
     <meta property="fb:app_id" content="398771933631124" />
     <meta property="og:title" content="Massage" />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="http://nmckenna.me/ttb/spa_book.jpg" />
+    <meta property="og:image" content="http://nmckenna.me/ttb/spa_book_lean.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:description" content="This is the massage of the century!" />
     <meta property="og:url" content="http://nmckenna.me/ttb/graph.html" />
@@ -13,7 +13,7 @@
 
 
 <body>
-    WELCOME TO THE SOCIAL GRAPH UGH x2
+    WELCOME TO THE SOCIAL GRAPH UGH x3
 </body>
 
 </html>
