--- a/ttb/graph.html
+++ b/ttb/graph.html
@@ -4,7 +4,7 @@
 <head>
     <meta property="fb:app_id" content="398771933631124" />
     <meta property="og:title" content="Massage" />
-    <meta property="og:type" content="article" />
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="http://nmckenna.me/ttb/spa_book_slim.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:description" content="This is the massage of the century!" />
