google analytics demographics update

--- a/index.html
+++ b/index.html
@@ -94,5 +94,6 @@
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-77378585-1', 'auto');
+    ga('require', 'displayfeatures');
     ga('send', 'pageview');
 </script>
