--- a/ttb/graph.html
+++ b/ttb/graph.html
@@ -8,7 +8,7 @@
     <meta property="og:image" content="http://nmckenna.me/ttb/spa_book_slim.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:description" content="This is the massage of the century!" />
-    <meta property="og:url" content="https://google.com" />
+    <meta property="og:url" content="http://tiny-dev.taptobook.com/y5bq" />
     <!-- <meta property="og:url" content="http://nmckenna.me/ttb/graph.html" /> -->
 </head>
 
