--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div id="header-title">NICK M<span class="raised-letter">c</span>KENNA</div>
         <div id="header-menu" class="distributed">
             <a class="menu-link" href="#bio">me</a>
+            <a class="menu-link" href="research-blog.html">research blog</a>
             <a class="menu-link" href="#projects">projects</a>
             <a class="menu-link" href="#contact">contact</a>
             <a class="menu-link" href="NickMcKenna.pdf">resume</a>
